--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Geral */
+
 html {
   font-family: 'Montserrat', sans-serif;
 }
@@ -11,4 +13,39 @@ html {
   margin: 10px;
   padding: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+}
+
+/* Área dos pontos */
+.scores {
+  display: flex;
+}
+
+.score {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.score h1 {
+  font-weight: 300;
+  font-size: 1.6rem;
+}
+
+.life-bar {
+  width: 80%;
+  height: 20px;
+  border: 1px solid #AAA;
+}
+
+.life-bar .life {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  background-color: green;
+}
+
+.life-bar .life.danger {
+  background-color: red;
 }
